--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
   </nav> -->
 
   <!-- Page Content -->
-  <div class="container dark-bg">
-    <div class="row">
-      <div class="col-lg-12 text-center">
+  <div class="container-fluid dark-bg h-100vh d-flex">
+    <div class="row m-auto">
+      <div class="col-lg-6 offset-3 text-center">
         <h1 class="mt-5 text-light">Uhhhh... sexy!</h1>
         <p class="lead text-light">Mecânica de Mac já tem um site... agora vamos fazer ficar bonito</p>
-        <ul class="list-unstyled">
-          <li>Bootstrap 4.3.1</li>
-          <li>jQuery 3.4.1</li>
+        <ul class="list-unstyled text-light">
+          <li>Instagram: <a href="https://www.intagram.com.br/mecanicademac">@mecanicademac</a></li>
         </ul>
       </div>
     </div>
