--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h1 class="mt-5 text-light">Uhhhh... sexy!</h1>
         <p class="lead text-light">Mecânica de Mac já tem um site... agora vamos fazer ficar bonito</p>
         <ul class="list-unstyled text-light">
-          <li>Instagram: <a href="https://www.intagram.com.br/mecanicademac">@mecanicademac</a></li>
+          <li>Instagram: <a href="https://www.instagram.com/mecanicademac">@mecanicademac</a></li>
         </ul>
       </div>
     </div>
