--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
   </nav> -->
 
   <!-- Page Content -->
-  <div class="container-fluid dark-bg h-100vh d-flex">
+  <div class="container-fluid dark-bg h-100vh">
+    <div class="row m-aut">
+      <div class="col-lg-4 offset-4 text-center">
+          <img class="img-fluid" src="assets/img/Logo-MDM@2x.png" alt="assets/img/Logo-MDM@2x.png">
+      </div>
+    </div>
     <div class="row m-auto">
       <div class="col-lg-6 offset-3 text-center">
-        <h1 class="mt-5 text-light">Uhhhh... sexy!</h1>
-        <p class="lead text-light">Mecânica de Mac já tem um site... agora vamos fazer ficar bonito</p>
         <ul class="list-unstyled text-light">
           <li>Instagram: <a href="https://www.instagram.com/mecanicademac">@mecanicademac</a></li>
         </ul>
