--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
     <div class="row m-auto">
       <div class="col-lg-6 offset-3 text-center">
         <ul class="list-unstyled text-light">
+          <li><a href = "mailto: contato@mecanicademac.com.br">contato@mecanicademac.com.br</a></li>
+          <li>11-98124-0905</li>
           <li>Instagram: <a href="https://www.instagram.com/mecanicademac">@mecanicademac</a></li>
         </ul>
       </div>
