--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
   <!-- Page Content -->
   <div class="container-fluid dark-bg h-100vh">
     <div class="row m-aut">
-      <div class="col-lg-4 offset-4 text-center">
+      <div class="col-sm-12 col-md-4 offset-md-4 text-center">
           <img class="img-fluid" src="assets/img/Logo-MDM@2x.png" alt="assets/img/Logo-MDM@2x.png">
       </div>
     </div>
     <div class="row m-auto">
-      <div class="col-lg-6 offset-3 text-center">
+      <div class="col-sm-12 col-md-6 offset-md-3 text-center">
         <ul class="list-unstyled text-light">
           <li><a href = "mailto: contato@mecanicademac.com.br">contato@mecanicademac.com.br</a></li>
           <li>11-98124-0905</li>
